--- a/my-react-app/src/components/Footer.css
+++ b/my-react-app/src/components/Footer.css
@@ -7,7 +7,7 @@
 .footer-container {
   max-width: 1400px;
   margin-left: auto;
-  margin-right: 2rem;
+  margin-right: 0;
   padding: 3rem 2rem;
   display: grid;
   grid-template-columns: 2fr 1fr 2fr;
